--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -20,11 +20,23 @@ body {
     padding: 0;
     margin: 0;
     position: fixed;
+    z-index: -1;
 }
 
 .content {
-    z-index: 1;
-    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    position: absolute;
+    overflow: hidden;
+    display: block;
+    margin: 0;
+    border: 0;
+    padding: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
 .bounding {
